src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>FromDateTime__c</fullName>
        <label>Available from</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hashtag__c</fullName>
        <label>Hashtag</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>Player__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ToDateTime__c</fullName>
        <label>Available to</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TwitterHandle__c</fullName>
        <label>Twitter</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isAvailable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCommunityEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community-Event</label>
        <type>Checkbox</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
    </listViews>
    <nameField>
        <label>Event-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>